[package]
name        = "festive-bot"
version     = "1.1.2"
authors     = ["Colm Baston"]
edition     = "2021"
description = "A bot to track events occurring on a private Advent of Code leaderboard."
repository  = "https://gitlab.com/colmbaston/festive-bot/"
readme      = "README.md"
license     = "MIT"

[dependencies]
json         = { version = "0.12.4" }
num-traits   = { version = "0.2.17" }
num-rational = { version = "0.4.1"  }
ctrlc        = { version = "3.4.2",   features = ["termination"] }
reqwest      = { version = "0.11.23", features = ["blocking", "multipart"] }
chrono       = { version = "0.4.31",  features = ["clock"], default-features = false }
